--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Курс по ReactJS</h1>
+    <div id="root"></div>
     <script src="./static/build/bundle.js"></script>
 </body>
 
