--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>React</title>
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="./static/build/bundle.js"></script>
 </body>
 
 </html>
